src/test/ui/issues/issue-29147.stderr
error[E0283]: type annotations required: cannot resolve `S5<_>: Foo`
  --> $DIR/issue-29147.rs:21:13
   |
LL |     let _ = <S5<_>>::xxx;
   |             ^^^^^^^^^^^^
   |
note: required by `Foo::xxx`
  --> $DIR/issue-29147.rs:10:13
   |
LL | trait Foo { fn xxx(&self); }
   |             ^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0283`.
